--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
       <button type="button" id="btn-apaga" class="btn btn-primary">
         Apagar
       </button>
-      <a class="btn" href="./bootstrap-project/index.html">Bootstrap Project</a>
+      <a class="btn" href="./bootstrap-project/index.html">Virtual Cycle</a>
     </div>
 
     <div id="notificacaoView"></div>
