--- a/client/bootstrap-project/index.html
+++ b/client/bootstrap-project/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/product/">
 
     <!-- Bootstrap core CSS -->
-<link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./assets/dist/css/bootstrap.min.css">
 
     <style>
       .bd-placeholder-img {
@@ -153,5 +153,6 @@
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="./assets/dist/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
+<script>window.jQuery || document.write('<script src="./assets/dist/js/vendor/jquery.slim.min.js"><\/script>')</script>
+<script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
 </html>
